--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background: #f2f2f2;
+  background: #252525;
 }
 
 body {
@@ -30,7 +30,7 @@ body {
 .formulario .btn {
   width: 100%;
   border: none;
-  background: rgb(108, 145, 226);
+  background: rgb(6, 32, 95);
   color: #fff;
   cursor: pointer;
   padding: 20px;
@@ -52,4 +52,9 @@ body {
   margin-block-start: 1rem;
   width: 100% !important;
   height: 100% !important;
+}
+#list {
+  color: white;
+  font-size: 1.5em;
+  text-align: center;
 }
