--- a/styles.css
+++ b/styles.css
@@ -58,3 +58,15 @@ body {
   font-size: 1.5em;
   text-align: center;
 }
+
+.content {
+  margin-block-start: 1rem;
+}
+
+.press {
+  margin: 1rem;
+  text-align: center;
+  color: white;
+  font-size: 1.2em;
+  display: none;
+}
